--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -1,7 +1,9 @@
 <ion-view view-title="About Us">
-    <ion-content>
-        <div class="prod-info">
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+    <ion-content class="padding">
+        <div class="incard">
+            <div class="prod-info">
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+            </div>
         </div>
-    </ioncontent>
-</ionview>
+    </ion-content>
+    </ionview>
