--- a/templates/faq.html
+++ b/templates/faq.html
@@ -1,5 +1,6 @@
 <ion-view view-title="FAQ's">
-    <ion-content>
+    <ion-content class="padding">
+              <div class="incard">
         <div class="padding">
             <p>
                 <b>Lorem Ipsum is simply dummy text?</b>
@@ -22,7 +23,7 @@
                 <br/> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
             </p>
 
-
+                  </div>
         </div>
     </ion-content>
 </ion-view>
