--- a/templates/selling.html
+++ b/templates/selling.html
@@ -1,21 +1,31 @@
 <ion-view view-title="Selling Approval">
-    <ion-content>
-        <div class="list">
+    <ion-content class="padding">
+        <div class="incard">
+            <div class="list">
+                <ion-item class="item item-thumbnail-left">
+                    <div class="row">
+                        <div class="col-33">
+                            <div class="sell-img">
+                                <img src="img/logo.png">
+                            </div>
+                        </div>
+                        <div class="col-67">
+                            <div class="sell-cont">
+                                <h2>Wohlig Technology</h2>
+                                <p>Amount: Rs.10,000</p>
 
-            <ion-item class="item item-thumbnail-left">
-                <img src="img/logo.png">
-                <h2>Wohlig Technology</h2>
-                <p>Amount: Rs.10,000</p>
-             
-                    <button class="button button-small button-outline button-balanced">
-                        Accept
-                    </button>
-              
-                    <button class="button button-small button-outline button-assertive">
-                        Decline
-                    </button>
-              
-            </ion-item>
+                                <button class="button button-small button-outline button-balanced">
+                                    Accept
+                                </button>
+
+                                <button class="button button-small button-outline button-assertive">
+                                    Decline
+                                </button>
+                            </div>
+                        </div>
+                </ion-item>
+                </div>
+            </div>
         </div>
     </ion-content>
 </ion-view>
