--- a/templates/shop.html
+++ b/templates/shop.html
@@ -75,11 +75,7 @@
     </ion-content>
 
 
-    <ion-footer-bar class="footer-shop">
-        <div class="btn-shop">
-            <button class="button button-block button-balanced" ng-click="openedit();">
-                Purchase
-            </button>
-        </div>
-    </ion-footer-bar>
+<ion-footer-bar class="footer-shop ion-item balanced" ng-click="openedit();">
+    <h4>Purchase</h4>
+</ion-footer-bar>
 </ion-view>
