--- a/templates/transaction.html
+++ b/templates/transaction.html
@@ -1,16 +1,24 @@
 <ion-view view-title="Transaction">
-    <ion-content>
-        <div class="list">
-            
-            <ion-item class="item item-thumbnail-left">
-                <img src="img/logo.png">
-                <h2>Wohlig Technology</h2>
-                <p>Amount: Rs.20,000</p>
-                <p>Date: 10th Mar 2015</p>
-            </ion-item>
-           
-
+    <ion-content class="padding">
+        <div class="incard">
+            <div class="list">
+                <ion-item class="item item-thumbnail-left">
+                    <div class="row">
+                        <div class="col-33">
+                            <div class="sell-img">
+                                <img src="img/logo.png">
+                            </div>
+                        </div>
+                        <div class="col-67">
+                            <div class="sell-cont">
+                                <h2>Wohlig Technology</h2>
+                                <p>Amount: Rs.20,000</p>
+                                <p>Date: 10th Mar 2015</p>
+                            </div>
+                        </div>
+                    </div>
+                </ion-item>
+            </div>
         </div>
-
     </ion-content>
 </ion-view>
