--- a/templates/yourbalance.html
+++ b/templates/yourbalance.html
@@ -1,8 +1,8 @@
 <ion-view view-title="My Balance">
     <ion-content class="padding">
-        <div class="incard pad-btm">
-            <ion-list class="lesspadding">
-                <ion-item class="">
+<div class="incard pad-btm">
+    <ion-list class="lesspadding">
+                <ion-item>
                     <div class="row text-center">
                         <div class="col">
                             <div class="balance bod-right">
@@ -25,8 +25,8 @@
                 </ion-item>
             </ion-list>
         </div>
-        <div class="padding pull-right">
-            <button class="button button-small button-balanced" ng-click="openedit();">Add Balance</button>
+        <div class="padding-vertical">
+            <button class="button button-block button-balanced" ng-click="openedit();">Add Balance</button>
         </div>
     </ion-content>
 </ion-view>
