--- a/templates/addbalance.html
+++ b/templates/addbalance.html
@@ -5,17 +5,19 @@
             <button class="button button-clear" ng-click="closeModal()">Close</button>
         </div>
     </ion-header-bar>
-    <ion-content>
-        <form ng-submit="doLogin()">
-            <div class="list">
-                <label class="item item-input">
-                    <span class="input-label">Amount:</span>
-                    <input type="text">
-                </label>
-                <div class="padding">
-                    <button class="button button-block button-outline button-balanced" type="submit">Add Balance</button>
+    <ion-content class="padding">
+        <div class="incard">
+            <form ng-submit="doLogin()">
+                <div class="list">
+                    <label class="item item-input">
+                        <span class="input-label">Amount:</span>
+                        <input type="text">
+                    </label>
+                    <div class="padding">
+                        <button class="button button-block button-balanced" type="submit">Add Balance</button>
+                    </div>
                 </div>
-            </div>
-        </form>
+            </form>
+        </div>
     </ion-content>
 </ion-modal-view>
