--- a/templates/resetpswd.html
+++ b/templates/resetpswd.html
@@ -5,22 +5,24 @@
             <button class="button button-clear" ng-click="closeModals()">Close</button>
         </div>
     </ion-header-bar>
-    <ion-content>
-        <form ng-submit="doLogin()">
-            <div class="list">
-                <label class="item item-input">
-                    Enter Password
-                </label>
-                <label class="item item-input">
-                    <input type="password" placeholder="New Password">
-                </label>
-                <label class="item item-input">
-                    <input type="password" placeholder="Confirm Password">
-                </label>
-                <div class="padding">
-                    <button class="button button-block button-outline button-balanced" type="submit">Submit</button>
+    <ion-content class="padding">
+        <div class="incard">
+            <form ng-submit="doLogin()">
+                <div class="list">
+                    <label class="item item-input header">
+                        Enter Password
+                    </label>
+                    <label class="item item-input">
+                        <input type="password" placeholder="New Password">
+                    </label>
+                    <label class="item item-input">
+                        <input type="password" placeholder="Confirm Password">
+                    </label>
+                    <div class="padding">
+                        <button class="button button-block button-balanced" type="submit">Submit</button>
+                    </div>
                 </div>
-            </div>
-        </form>
+            </form>
+        </div>
     </ion-content>
 </ion-modal-view>
