--- a/templates/profile.html
+++ b/templates/profile.html
@@ -21,23 +21,23 @@
                     </div>
                     <input type="text" name="lname" value="Mobile" disabled>
                 </label>
+                <label class="item item-input item-text-wrap header">
+                    <h2> Address</h2>
+                </label>
                 <label class="item item-input item-text-wrap">
-                    <div class="input-label">
-                        Address
-                    </div>
                     <div class="input itemproducts">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     </div>
                 </label>
+                <label class="item item-input item-text-wrap header">
+                    <h2>Description</h2>
+                </label>
                 <label class="item item-input item-text-wrap">
-                    <div class="input-label">
-                        Description
-                    </div>
                     <div class="input itemproducts">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     </div>
                 </label>
-                <label class="item item-input item-text-wrap">
+                <label class="item item-input item-text-wrap header">
                     <h2>Shops</h2>
                 </label>
                 <label class="item item-input item-text-wrap itemproducts">
@@ -62,7 +62,7 @@
 </div>
 -->
                 </label>
-                <label class="item item-input item-text-wrap">
+                <label class="item item-input item-text-wrap header">
                     <h2>Products</h2>
                 </label>
                 <label class="item item-input item-text-wrap itemproducts">
