--- a/templates/addbalance.html
+++ b/templates/addbalance.html
@@ -13,7 +13,7 @@
                         <span class="input-label">Amount:</span>
                         <input type="text">
                     </label>
-                    <div class="padding">
+                    <div class="padding-horizontal">
                         <button class="button button-block button-balanced" type="submit">Add Balance</button>
                     </div>
                 </div>
