--- a/templates/faq.html
+++ b/templates/faq.html
@@ -1,29 +1,39 @@
 <ion-view view-title="FAQ's">
     <ion-content class="padding">
-              <div class="incard">
-        <div class="padding">
-            <p>
-                <b>Lorem Ipsum is simply dummy text?</b>
-                <br/> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
-            </p>
-            <p>
-                <b>Lorem Ipsum is simply dummy text?</b>
-                <br/> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
-            </p>
-            <p>
-                <b>Lorem Ipsum is simply dummy text?</b>
-                <br/> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
-            </p>
-            <p>
-                <b>Lorem Ipsum is simply dummy text?</b>
-                <br/> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
-            </p>
-            <p>
-                <b>Lorem Ipsum is simply dummy text?</b>
-                <br/> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
-            </p>
+        <div class="incard">
+            <div class="padding">
+                <div class="faq-cont">
+                    <p>
+                        <b>Lorem Ipsum is simply dummy text?</b>
+                        <br/> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
+                    </p>
+                </div>
+                <div class="faq-cont">
+                    <p>
+                        <b>Lorem Ipsum is simply dummy text?</b>
+                        <br/> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
+                    </p>
+                </div>
+                <div class="faq-cont">
+                    <p>
+                        <b>Lorem Ipsum is simply dummy text?</b>
+                        <br/> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
+                    </p>
+                </div>
+                <div class="faq-cont">
+                    <p>
+                        <b>Lorem Ipsum is simply dummy text?</b>
+                        <br/> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
+                    </p>
+                </div>
+                <div class="faq-cont">
+                    <p>
+                        <b>Lorem Ipsum is simply dummy text?</b>
+                        <br/> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
+                    </p>
+                </div>
 
-                  </div>
+            </div>
         </div>
     </ion-content>
 </ion-view>
