--- a/templates/shop.html
+++ b/templates/shop.html
@@ -10,57 +10,57 @@
 
                 </ion-item>
             </ion-list>
-            <label class="item item-input item-text-wrap header">
-                Address
-            </label>
-            <label class="item item-input item-text-wrap">
+            <div class="item item-input item-text-wrap header">
+                <h2>Address</h2>
+            </div>
+            <div class="item item-input item-text-wrap">
                 <div class="input itemproducts">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 </div>
-            </label>
-            <label class="item item-input item-text-wrap header">
-                Details
-            </label>
-            <label class="item item-input item-text-wrap">
+            </div>
+            <div class="item item-input item-text-wrap header">
+                <h2> Details</h2>
+            </div>
+            <div class="item item-input item-text-wrap">
                 <div class="input itemproducts">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 </div>
-            </label>
-            <label class="item item-input item-text-wrap header">
-                Shops
-            </label>
-            <label class="item item-input item-text-wrap itemproducts">
-                <div class="input-label">
+            </div>
+            <div class="item item-input item-text-wrap header">
+                <h2> Shops</h2>
+            </div>
+            <div class="item item-input item-text-wrap itemproducts">
+                <div class="input-div">
                     <div class="img-profile">
                         <img src="img/dookie.jpg">
                     </div>
                 </div>
-                <div class="input-label">
+                <div class="input-div">
                     <div class="img-profile">
                         <img src="img/dookie.jpg">
                     </div>
                 </div>
-                <div class="input-label">
+                <div class="input-div">
                     <div class="img-profile">
                         <img src="img/dookie.jpg">
                     </div>
                 </div>
-            </label>
-            <label class="item item-input item-text-wrap header">
-                Products
-            </label>
-            <label class="item item-input item-text-wrap itemproducts">
-                <div class="input-label">
+            </div>
+            <div class="item item-input item-text-wrap header">
+                <h2>  Products</h2>
+            </div>
+            <div class="item item-input item-text-wrap itemproducts">
+                <div class="input-div">
                     <div class="img-profile">
                         <img src="img/dookie.jpg">
                     </div>
                 </div>
-                <div class="input-label">
+                <div class="input-div">
                     <div class="img-profile">
                         <img src="img/dookie.jpg">
                     </div>
                 </div>
-                <div class="input-label">
+                <div class="input-div">
                     <div class="img-profile">
                         <img src="img/dookie.jpg">
                     </div>
@@ -70,12 +70,12 @@
     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
 </div>
 -->
-            </label>
+            </div>
         </div>
     </ion-content>
 
 
-<ion-footer-bar class="footer-shop ion-item balanced" ng-click="openedit();">
-    <h4>Purchase</h4>
-</ion-footer-bar>
+    <ion-footer-bar class="footer-shop ion-item balanced" ng-click="openedit();">
+        <h4>Purchase</h4>
+    </ion-footer-bar>
 </ion-view>
