--- a/templates/transaction.html
+++ b/templates/transaction.html
@@ -4,13 +4,13 @@
             <div class="list">
                 <ion-item class="item item-thumbnail-left">
                     <div class="row">
-                        <div class="col-33">
+                        <div class="col-25">
                             <div class="sell-img">
                                 <img src="img/logo.png">
                             </div>
                         </div>
-                        <div class="col-67">
-                            <div class="sell-cont">
+                        <div class="col-75">
+                            <div class="sell-cont trans">
                                 <h2>Wohlig Technology</h2>
                                 <p>Amount: Rs.20,000</p>
                                 <p>Date: 10th Mar 2015</p>
