--- a/templates/yourbalance.html
+++ b/templates/yourbalance.html
@@ -1,8 +1,8 @@
 <ion-view view-title="My Balance">
     <ion-content class="padding">
-<div class="incard pad-btm">
-    <ion-list class="lesspadding">
-                <ion-item>
+        <div class="incard pad-btm">
+            <ion-list class="lesspadding">
+                <ion-item class="my-balcont">
                     <div class="row text-center">
                         <div class="col">
                             <div class="balance bod-right">
@@ -24,9 +24,10 @@
                     </div>
                 </ion-item>
             </ion-list>
+            <div class="padding-horizontal">
+                <button class="button button-block button-balanced" ng-click="openedit();">Add Balance</button>
+            </div>
         </div>
-        <div class="padding-vertical">
-            <button class="button button-block button-balanced" ng-click="openedit();">Add Balance</button>
-        </div>
+
     </ion-content>
 </ion-view>
